# miking

./: README.md  bench.mc  compile-all.sh  test-files.mk
.github/workflows/: main.yml
demo/: README.md  dune  extdyn.ml  program.ml
src/main/: accelerate.mc  compile.mc
stdlib/: array.mc  rope.mc  seq.mc  string.mc
stdlib/c/: ast.mc  pprint.mc
stdlib/cuda/: ast-builder.mc  ast.mc  compile.mc  generate.mc  gpu-utils.mc  pprint.mc  well-formed.mc  wrapper.mc
stdlib/ext/: dist-ext.mc  math-ext.mc  rtppl-ext.ext-ocaml.mc  rtppl-ext.mc
stdlib/futhark/: generate.mc  pprint.mc  well-formed.mc  wrapper.mc
stdlib/mexpr/: anf.mc  ast-builder.mc  ast.mc  boot-parser.mc  builtin.mc  cfa.mc  cmp.mc  const-arity.mc  const-fold.mc  const-types.mc  eq.mc  eval.mc  jit.mc  keywords.mc  lamlift.mc  monomorphize.mc  pprint.mc  rewrite.mc  side-effect.mc  type-annot.mc  type-check.mc  unify.mc  utest-generate.mc  utest-runtime.mc  utesttrans.mc
stdlib/ocaml/: ast.mc  external-includes.mc  external.mc  generate.mc  intrinsics-ops.mc  pprint.mc  symbolize.mc
stdlib/pmexpr/: ast.mc  classify.mc  compile.mc  demote.mc  extract.mc  in-accelerate.mc  parallel-patterns.mc  parallel-rewrite.mc  pattern-match.mc  promote.mc  replace-accelerate.mc  utest-size-constraint.mc  wrapper.mc
stdlib/tuning/: hole-cfa.mc
test/mexpr/: effects.mc  fix.mc  float-test.mc  nestedpatterns.mc  references.mc  seq-test.mc  string-test.mc  symbs.mc
test/microbenchmark/: fold_list_x.mc  fold_rope_x.mc  iter_list_x.mc  iter_rope_x.mc  map_list_x.mc  map_rope_x.mc  run.ml  split_list_x.mc  (+1 more)
(+20 files in other folders)
